# bookmark_app

./: README.md  docker-compose.yml  pyproject.toml
src/bookmark_app/: MEMO  TODO  __init__.py  main.py  quick_start_meilisearch.py  scraping_util.py
