[project]
name = "bookmark_app"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yutaro.ueno", email = "yutarofortech@gmail.com" }
]
dependencies = ["fastapi[all]~=0.97.0", "duckdb~=0.8.1", "beautifulsoup4~=4.12.2", "requests~=2.31.0", "meilisearch~=0.28.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
